--- a/main.html
+++ b/main.html
@@ -7,30 +7,37 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
-		 <tr>
-      <!-- Top row -->
+    <table>
+    <tr>
       <td>
-        <!-- Nested Table 2 -->
         <table>
-          <caption><b>Nested Table 2</b></caption>
           <tr>
-            <th>Column 1</th>
-            <th>Column 2</th>
+            <th>Nested Table 2</th>
           </tr>
           <tr>
-            <td>abc</td>
-            <td>def</td>
+            <td>
+              <table>
+                <tr>
+                  <th>Column 1</th>
+                  <th>Column 2</th>
+                </tr>
+                <tr>
+                  <td>abc</td>
+                  <td>def</td>
+                </tr>
+              </table>
+            </td>
           </tr>
         </table>
       </td>
       <td>
-        <!-- Nested Table 1 -->
         <table>
-          <caption><b>Nested Table 1</b></caption>
+          <tr>
+            <th>Nested Table 1</th>
+          </tr>
           <tr>
             <td>
-              <ul style="text-align: left; margin: 0; padding-left: 20px;">
+              <ul>
                 <li>List item 1</li>
                 <li>List item 2</li>
                 <li>List item 3</li>
@@ -42,11 +49,11 @@
     </tr>
 
     <tr>
-      <!-- Bottom row -->
       <td>
-        <!-- Nested Table 3 -->
         <table>
-          <caption><b>Nested Table 3</b></caption>
+          <tr>
+            <th>Nested Table 3</th>
+          </tr>
           <tr>
             <td><a href="#">Nested Table</a></td>
             <td>Demo Continued</td>
@@ -54,15 +61,16 @@
         </table>
       </td>
       <td>
-        <!-- Nested Table 4 -->
         <table>
-          <caption><b>Nested Table 4</b></caption>
+          <tr>
+            <th>Nested Table 4</th>
+          </tr>
           <tr>
             <td class="black-cell">HTML</td>
           </tr>
         </table>
       </td>
     </tr>
-    </table>
+  </table>
   </body>
 </html>
