--- a/main.html
+++ b/main.html
@@ -9,27 +9,7 @@
   <body>
     <table>
     <tr>
-      <td>
-        <table>
-          <tr>
-            <th>Nested Table 2</th>
-          </tr>
-          <tr>
-            <td>
-              <table>
-                <tr>
-                  <th>Column 1</th>
-                  <th>Column 2</th>
-                </tr>
-                <tr>
-                  <td>abc</td>
-                  <td>def</td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-        </table>
-      </td>
+      <!-- Nested Table 1 -->
       <td>
         <table>
           <tr>
@@ -46,9 +26,27 @@
           </tr>
         </table>
       </td>
+
+      <!-- Nested Table 2 -->
+      <td>
+        <table>
+          <tr>
+            <th>Nested Table 2</th>
+          </tr>
+          <tr>
+            <td>Column 1</td>
+            <td>Column 2</td>
+          </tr>
+          <tr>
+            <td>abc</td>
+            <td>def</td>
+          </tr>
+        </table>
+      </td>
     </tr>
 
     <tr>
+      <!-- Nested Table 3 -->
       <td>
         <table>
           <tr>
@@ -60,6 +58,8 @@
           </tr>
         </table>
       </td>
+
+      <!-- Nested Table 4 -->
       <td>
         <table>
           <tr>
